index 통합 / main.js 구글 전송 수정해야함

--- a/index.html
+++ b/index.html
@@ -14,47 +14,72 @@
           <img src="img/main_logo.jpg" alt="메인 로고" class="main-logo" />
         </div>
         <div class="nav-center">
-          <h1>준이 AlBum</h1>
+          <h1>준이 찍은 사진 모아보기</h1>
         </div>
       </div>
     </nav>
 
-    <!-- 검색 영역 추가 -->
-    <div class="search-container">
-      <input type="text" class="search-input" placeholder="사진 검색하기..." />
-    </div>
-
-    <!-- 사진 갤러리 영역 추가 -->
-    <div class="gallery-container">
-      <div class="gallery-grid" id="photoGallery">
-        <!-- 여기에 사진들이 동적으로 추가될 것입니다 -->
+    <main class="container">
+      <!-- 검색 영역 추가 -->
+      <div class="search-container">
+        <input
+          type="text"
+          class="search-input"
+          placeholder="사진 검색하기..."
+        />
       </div>
-    </div>
 
-    <div class="upload-container">
-      <div class="upload-controls">
-        <input type="file" id="imageUpload" accept="image/*" multiple />
-        <label for="imageUpload" class="upload-button">이미지 업로드</label>
+      <!-- 업로드 버튼 추가 -->
+      <div class="upload-button-container">
+        <button id="openUploadModal" class="open-upload-button">
+          이미지 업로드
+        </button>
+      </div>
 
-        <div class="common-filter">
-          <input
-            type="text"
-            id="commonTagInput"
-            class="tag-input"
-            placeholder="공통 태그 입력"
-          />
-          <button id="addCommonTag" class="add-tag-button">Add to All</button>
+      <!-- 업로드 모달 추가 -->
+      <div id="uploadModal" class="modal">
+        <div class="modal-content">
+          <span class="close-modal">&times;</span>
+          <div class="upload-container">
+            <div class="upload-controls">
+              <input type="file" id="imageUpload" accept="image/*" multiple />
+              <label for="imageUpload" class="upload-button">이미지 선택</label>
+
+              <div class="common-filter" style="display: none">
+                <input
+                  type="text"
+                  id="commonTagInput"
+                  class="tag-input"
+                  placeholder="공통 태그 입력"
+                />
+                <button id="addCommonTag" class="add-tag-button">
+                  Add to All
+                </button>
+              </div>
+            </div>
+
+            <div id="imagePreview" class="image-preview-container"></div>
+
+            <div class="upload-submit-container">
+              <button
+                id="submitUpload"
+                class="submit-button"
+                style="display: none"
+              >
+                사진 업로드
+              </button>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div id="imagePreview" class="image-preview-container"></div>
-
-      <div class="upload-submit-container">
-        <button id="submitUpload" class="submit-button" style="display: none">
-          사진 업로드
-        </button>
+      <!-- 사진 갤러리 영역 추가 -->
+      <div class="gallery-container">
+        <div class="gallery-grid" id="photoGallery">
+          <!-- 여기에 사진들이 동적으로 추가될 것입니다 -->
+        </div>
       </div>
-    </div>
+    </main>
 
     <script src="main.js"></script>
   </body>
