순서정렬추가 및 20개단위 이미지 로딩

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
     <main class="container">
       <!-- 업로드 버튼 추가 -->
       <div class="upload-button-container">
+        <!-- 정렬 버튼 추가 -->
+        <div class="sort-buttons">
+          <button id="sortNewest" class="sort-button">
+            <i class="fas fa-sort-amount-down"></i> 최신순
+          </button>
+          <button id="sortOldest" class="sort-button">
+            <i class="fas fa-sort-amount-up"></i> 오래된순
+          </button>
+        </div>
         <button id="openUploadModal" class="open-upload-button">
           이미지 업로드
         </button>
