메타태그 수정

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="준이 앨범" />
+    <meta
+      property="og:description"
+      content="준이 사진을 검색해서 볼 수 있는 사이트"
+    />
+    <meta
+      property="og:image"
+      content="https://joonpic.pages.dev/img/main_logo.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Joon's Picture" />
+    <meta property="og:locale" content="ko_KR" />
+
     <title>Joon's Album</title>
     <link rel="stylesheet" href="style.css" />
     <link
