--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       property="og:image"
       content="https://joonpic.pages.dev/img/main_logo.jpg"
     />
+    <meta property="og:image:width" content="247" />
+    <meta property="og:image:height" content="244" />
+
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Joon's Picture" />
     <meta property="og:locale" content="ko_KR" />
