--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       property="og:image"
-      content="https://joonpic.pages.dev/img/main_logo.jpg"
+      content="https://joonpic.pages.dev/img/main_logo_kkt.png"
     />
     <meta property="og:image:width" content="247" />
     <meta property="og:image:height" content="244" />
