--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=3.0, minimum-scale=0.5"
+      content="width=device-width, initial-scale=1.0, user-scalable=yes"
     />
     <meta property="og:title" content="준이 앨범" />
     <meta
